@@ -4,4 +4,4 @@
 <br/>&amp;bullet;&nbsp;Бібліятэка ў выглядзе мініятур. 100% без рэклямы. (вы можаце выбраць старыя выгляд бібліятэкі, калі захочаце).
 <br/>&amp;bullet;&nbsp;Інтэграцыя Google Translate: проста вылучайце фразу і націскайец кнопку перакладу ў выплыўным мэню.
 <br/>&amp;bullet;&nbsp;Вашая купля дапаможа разьвіцьцю праекту FBReader, дазваляючы нараджацца новым магчымасьцям для бясплатнай і прэміюмнай вэрсій праграмы.</p>
-<p>Аднойчы абнавіўшыся ад FBReader Прэміюм, вы зможаце выкарыстоўваць усе яго магчымасьці на ўсіх сваіх прыладах. Усе вашыя налады будуць аўтаматычна скапіяваныя ў прэміюмную вэрсію.</p>
+<p>Аднойчы абнавіўшыся ад FBReader Прэміюм, Вы зможаце выкарыстоўваць усе яго магчымасьці на ўсіх сваіх прыладах. Усе Вашыя налады будуць аўтаматычна скапіяваныя ў прэміюмную вэрсію.</p>
