@@ -296,7 +296,7 @@
 		<node name="preferences" value="Settings"/>
 		<node name="bookInfo" value="Book info"/>
 		<node name="library" value="Library"/>
-		<node name="toc" value="TOC"/>
+		<node name="toc" value="Table of contents"/>
 		<node name="day" value="Day"/>
 		<node name="night" value="Night"/>
 		<node name="dayNight" value="Day/Night"/>
