@@ -11,9 +11,9 @@
 <p class='opds last'><fbreader:opds size='5' src='https://data.fbreader.org/recommended/default/catalog.xml'/></p>
 <h3 id='network'>Шукаеце больш кніг?</h3>
 <p>Існуе разьдзел <a href='fbreader-action:networkLibrary'>Сеткавая бібліятэка</a>. У ім Вы можаец знайсьці некалькі каталёгаў з кнігамі, некаторымі бясплатнымі, некаторымі — даступнымі за невялікую плату. Таксама Вы можаце дадаць уласны каталёг OPDS у сьпіс.</p>
-<p class='last'>Любую з кніг, захаваных на вашае прыладзе, можна адчыніць праз <a href='fbreader-action:library'>Бібліятэку</a>.</p>
+<p class='last'>Любую з кніг, захаваных на Вашае прыладзе, можна адчыніць праз <a href='fbreader-action:library'>Бібліятэку</a>.</p>
 <h3 id='sync'>Захоўвайце Вашыя кнігі ў воблаку.</h3>
-<p>Жадаеце мець Вашыя кнігі адначасова на некалькіх прыладах? Ці, магчыма, хочаце захоўваць іх у бясьпечным месцы? Кніжная сетка FBReader — гэта воблачнае сховішча, якое выкарыстоўвае Дыск Google™. <a href='fbreader-action:preferences#sync'>Уключыце сынхранізацыю</a> з кніжнай сеткай, і Вашая кнжная калекцыя будзе заўсёды даступная зь любой з вашых прылад. Вашыя кнігі будуць захаваныя ў вашым уласным месцы на Дыску Google™. Вы можаце кіраваць вашай калекцыяй зь любога аглядальніка.</p>
+<p>Жадаеце мець Вашыя кнігі адначасова на некалькіх прыладах? Ці, магчыма, хочаце захоўваць іх у бясьпечным месцы? Кніжная сетка FBReader — гэта воблачнае сховішча, якое выкарыстоўвае Дыск Google™. <a href='fbreader-action:preferences#sync'>Уключыце сынхранізацыю</a> з кніжнай сеткай, і Вашая кнжная калекцыя будзе заўсёды даступная зь любой з Вашых прылад. Вашыя кнігі будуць захаваныя ў Вашым уласным месцы на Дыску Google™. Вы можаце <a href='https://books.fbreader.org/'>кіраваць Вашай калекцыяй</a> зь любога аглядальніка.</p>
 <p class='last'>Чытаеце адну і тую ж кнігу на тэлефоне і тэблеце? Забудзьце пра пастаянны пошук патрэбнай старонкі ўручную пры зьмене прылад. Уключыце сынхранізацыю FBReader на абедзьвюх прыладах, і праграма сама будзе адчыняць месца, на якім Вы спыніліся ў мінулы раз.</p>
 <h3 id='introduction'>Выбар фарматаў кніг.</h3>
 <p>FBReader падтрымлівае ўсе папулярныя фарматы тэкставых файлаў. Тым ня менш, калі Вы маеце кнігу ў некалькіх фарматах, найлепшым выбарам будуць <code>ePub</code>, <code>mobi</code> (таксама вядомы як <code>azw3</code> ці <code>kindle</code>) ці <code>fb2</code>. Калі ласка, помніце, што FBReader — бясплатная прашрама для чытаньня, а таму не адчыняе кнігі, абароненыя DRM. Нятэкставыя фарматы накшталт <code>PDF</code> ці <code>DjVu</code> падтрымліваюцца ўбудовамі FBReader.</p>
